# SoilMoistureProfiles

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  RUN.md  make_bmi_coupler.sh  make_bmi_mapper.sh  make_bmi_smp.sh  make_run_standalone.sh  run_smp.sh  smpbmi.pc.in
.github/workflows/: build_and_run_tests.yml  ngen_integration.yaml
auto_py_script/: README.md
auto_py_script/R/: giuh_function.R  hf_basin_dem_twi.R  main.R  plot_giuh.R  plot_twi.R  twi_width_function.R
auto_py_script/crf_workflow/: baseline.py  configuration.py  driver.py  main.py  realization.py
basin_workflow/: FORCING.md  README.md
basin_workflow/generate_files/: configuration.py  driver.py  main.py  realization.py
basin_workflow/giuh_twi/: add_model_attributes.R  custom_functions.R  download_camels_basins_from_S3.R  driver.R  giuh.R  giuh_function.R  helper.R  install_load_libs.R  main.R  nash_cascade.R  plot_giuh.R  plot_twi.R  twi_width.R  twi_width_function.R
bmi_wrapper_models/: CMakeLists.txt  README.md
bmi_wrapper_models/configs/: config_file.txt
bmi_wrapper_models/include/: bmi_model_c.hxx  bmi_model_cxx.hxx  model_c.hxx  model_cxx.hxx
bmi_wrapper_models/src/: bmi_model_c.cxx  bmi_model_cxx.cxx  main.cxx  model_c.cxx  model_cxx.cxx
config/: README.md  config_conceptual.txt  config_layered.txt  config_topmodel.txt  realization_config_smp.json  realization_config_smp_linux.json  realization_config_smp_macos.json  realization_config_smp_ngenCI.json  realization_config_smp_topmodel.json  realization_config_smp_topmodel_ngenCI.json  topmod.run
configs/: README.md  config_cfe.txt  config_layered.txt  config_topmodel.txt  realization_config_smp_ngenCI.json  realization_config_smp_topmodel_ngenCI.json  topmod.run
include/: bmi_coupler.hxx  bmi_mapper.hxx  bmi_soil_moisture_profile.hxx  smc_mapping.hxx  smc_profile.hxx  soil_moisture_mapping.hxx  soil_moisture_profile.hxx
pyscripts/: SoilMoistureProfileModel.ipynb
realizations/: realization_config_smp.json  realization_config_smp_cfe.json  realization_config_smp_topmodel.json
regridder/: README.md  make_bmi_mapper.sh  run_bmi_mapper
regridder/config/: config_mapping.txt  config_syn.txt
regridder/data/: synthetic_data_example.xlsx
regridder/data/synthetic/: grid_mapping_syn2x2_case0.csv  grid_mapping_syn2x2_case1.csv  grid_mapping_syn2x2_case2.csv  grid_mapping_syn2x2_case3.csv
regridder/include/: bmi_regridder.hxx  soil_moisture_regridding.hxx
regridder/src/: bmi_main_regridder.cxx  bmi_regridder.cxx  soil_moisture_regridding.cxx
src/: bmi_coupler.cxx  bmi_main.cxx  bmi_main_mapper.cxx  bmi_main_moisture.cxx  bmi_mapper.cxx  bmi_soil_moisture_profile.cxx  main_smp_cfe.cxx  main_smp_topmodel.cxx  main_soil_moisture.cxx  smc_mapping.cxx  smc_profile.cxx  soil_moisture_mapping.cxx  soil_moisture_profile.cxx
test/: README.md  config.txt  config_conceptual.txt  config_layered.txt  config_mapping.txt  grid_mapping.csv  main_unit_test_bmi.cxx  main_unittest.cxx  run_unittest.sh  twi_data.csv
test/configs/: unittest.txt  unittest_layered_constant.txt  unittest_layered_linear.txt
tests/: README.md  main_unittest.cxx  run_unittest.sh
tests/configs/: unittest_layered_linear.txt
